# 20231105_MrThamTraiHeoTinhVinhPhuc11/sourceCode/GiamSat.API/GiamSat.API/obj/Debug/net5.0/Razor/Views/DataLog/Create.cshtml.g.cs
@@ -1,0 +1,115 @@
+#pragma checksum "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Create.cshtml" "{ff1816ec-aa5e-4d10-87f7-6f4963833460}" "c6bc5e9f4adaab66277ca9f529b241c6239665d4"
+// <auto-generated/>
+#pragma warning disable 1591
+[assembly: global::Microsoft.AspNetCore.Razor.Hosting.RazorCompiledItemAttribute(typeof(AspNetCore.Views_DataLog_Create), @"mvc.1.0.view", @"/Views/DataLog/Create.cshtml")]
+namespace AspNetCore
+{
+    #line hidden
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Threading.Tasks;
+    using Microsoft.AspNetCore.Mvc;
+    using Microsoft.AspNetCore.Mvc.Rendering;
+    using Microsoft.AspNetCore.Mvc.ViewFeatures;
+    [global::Microsoft.AspNetCore.Razor.Hosting.RazorSourceChecksumAttribute(@"SHA1", @"c6bc5e9f4adaab66277ca9f529b241c6239665d4", @"/Views/DataLog/Create.cshtml")]
+    public class Views_DataLog_Create : global::Microsoft.AspNetCore.Mvc.Razor.RazorPage<GiamSat.Models.DataLogModel>
+    {
+        #pragma warning disable 1998
+        public async override global::System.Threading.Tasks.Task ExecuteAsync()
+        {
+            WriteLiteral("\r\n");
+#nullable restore
+#line 3 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Create.cshtml"
+  
+    ViewData["Title"] = "Create";
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral(@"
+<h1>Create</h1>
+
+<h4>DataLogModel</h4>
+<hr />
+<div class=""row"">
+    <div class=""col-md-4"">
+        <form asp-action=""Create"">
+            <div asp-validation-summary=""ModelOnly"" class=""text-danger""></div>
+            <div class=""form-group"">
+                <label asp-for=""ChuongId"" class=""control-label""></label>
+                <input asp-for=""ChuongId"" class=""form-control"" />
+                <span asp-validation-for=""ChuongId"" class=""text-danger""></span>
+            </div>
+            <div class=""form-group"">
+                <label asp-for=""TenChuong"" class=""control-label""></label>
+                <input asp-for=""TenChuong"" class=""form-control"" />
+                <span asp-validation-for=""TenChuong"" class=""text-danger""></span>
+            </div>
+            <div class=""form-group"">
+                <label asp-for=""NhietDo"" class=""control-label""></label>
+                <input asp-for=""NhietDo"" class=""form-control"" />
+                <span asp-validation-for=""NhietDo"" class=""text-danger");
+            WriteLiteral(@"""></span>
+            </div>
+            <div class=""form-group"">
+                <label asp-for=""DoAm"" class=""control-label""></label>
+                <input asp-for=""DoAm"" class=""form-control"" />
+                <span asp-validation-for=""DoAm"" class=""text-danger""></span>
+            </div>
+            <div class=""form-group"">
+                <label asp-for=""CreatedDate"" class=""control-label""></label>
+                <input asp-for=""CreatedDate"" class=""form-control"" />
+                <span asp-validation-for=""CreatedDate"" class=""text-danger""></span>
+            </div>
+            <div class=""form-group form-check"">
+                <label class=""form-check-label"">
+                    <input class=""form-check-input"" asp-for=""IsActive"" /> ");
+#nullable restore
+#line 42 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Create.cshtml"
+                                                                     Write(Html.DisplayNameFor(model => model.IsActive));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral(@"
+                </label>
+            </div>
+            <div class=""form-group"">
+                <input type=""submit"" value=""Create"" class=""btn btn-primary"" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action=""Index"">Back to List</a>
+</div>
+
+");
+            DefineSection("Scripts", async() => {
+                WriteLiteral("\r\n");
+#nullable restore
+#line 57 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Create.cshtml"
+      await Html.RenderPartialAsync("_ValidationScriptsPartial");
+
+#line default
+#line hidden
+#nullable disable
+            }
+            );
+        }
+        #pragma warning restore 1998
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.ViewFeatures.IModelExpressionProvider ModelExpressionProvider { get; private set; }
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.IUrlHelper Url { get; private set; }
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.IViewComponentHelper Component { get; private set; }
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.Rendering.IJsonHelper Json { get; private set; }
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.Rendering.IHtmlHelper<GiamSat.Models.DataLogModel> Html { get; private set; }
+    }
+}
+#pragma warning restore 1591
