# 20231105_MrThamTraiHeoTinhVinhPhuc11/sourceCode/GiamSat.API/GiamSat.API/obj/Debug/net5.0/Razor/Views/DataLog/Delete.cshtml.g.cs
@@ -1,0 +1,141 @@
+#pragma checksum "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml" "{ff1816ec-aa5e-4d10-87f7-6f4963833460}" "508a3d055bec444e7f97df114521e88c3bca8300"
+// <auto-generated/>
+#pragma warning disable 1591
+[assembly: global::Microsoft.AspNetCore.Razor.Hosting.RazorCompiledItemAttribute(typeof(AspNetCore.Views_DataLog_Delete), @"mvc.1.0.view", @"/Views/DataLog/Delete.cshtml")]
+namespace AspNetCore
+{
+    #line hidden
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Threading.Tasks;
+    using Microsoft.AspNetCore.Mvc;
+    using Microsoft.AspNetCore.Mvc.Rendering;
+    using Microsoft.AspNetCore.Mvc.ViewFeatures;
+    [global::Microsoft.AspNetCore.Razor.Hosting.RazorSourceChecksumAttribute(@"SHA1", @"508a3d055bec444e7f97df114521e88c3bca8300", @"/Views/DataLog/Delete.cshtml")]
+    public class Views_DataLog_Delete : global::Microsoft.AspNetCore.Mvc.Razor.RazorPage<GiamSat.Models.DataLogModel>
+    {
+        #pragma warning disable 1998
+        public async override global::System.Threading.Tasks.Task ExecuteAsync()
+        {
+            WriteLiteral("\r\n");
+#nullable restore
+#line 3 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+  
+    ViewData["Title"] = "Delete";
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n<h1>Delete</h1>\r\n\r\n<h3>Are you sure you want to delete this?</h3>\r\n<div>\r\n    <h4>DataLogModel</h4>\r\n    <hr />\r\n    <dl class=\"row\">\r\n        <dt class = \"col-sm-2\">\r\n            ");
+#nullable restore
+#line 15 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+       Write(Html.DisplayNameFor(model => model.ChuongId));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dt>\r\n        <dd class = \"col-sm-10\">\r\n            ");
+#nullable restore
+#line 18 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+       Write(Html.DisplayFor(model => model.ChuongId));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dd>\r\n        <dt class = \"col-sm-2\">\r\n            ");
+#nullable restore
+#line 21 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+       Write(Html.DisplayNameFor(model => model.TenChuong));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dt>\r\n        <dd class = \"col-sm-10\">\r\n            ");
+#nullable restore
+#line 24 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+       Write(Html.DisplayFor(model => model.TenChuong));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dd>\r\n        <dt class = \"col-sm-2\">\r\n            ");
+#nullable restore
+#line 27 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+       Write(Html.DisplayNameFor(model => model.NhietDo));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dt>\r\n        <dd class = \"col-sm-10\">\r\n            ");
+#nullable restore
+#line 30 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+       Write(Html.DisplayFor(model => model.NhietDo));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dd>\r\n        <dt class = \"col-sm-2\">\r\n            ");
+#nullable restore
+#line 33 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+       Write(Html.DisplayNameFor(model => model.DoAm));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dt>\r\n        <dd class = \"col-sm-10\">\r\n            ");
+#nullable restore
+#line 36 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+       Write(Html.DisplayFor(model => model.DoAm));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dd>\r\n        <dt class = \"col-sm-2\">\r\n            ");
+#nullable restore
+#line 39 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+       Write(Html.DisplayNameFor(model => model.CreatedDate));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dt>\r\n        <dd class = \"col-sm-10\">\r\n            ");
+#nullable restore
+#line 42 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+       Write(Html.DisplayFor(model => model.CreatedDate));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dd>\r\n        <dt class = \"col-sm-2\">\r\n            ");
+#nullable restore
+#line 45 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+       Write(Html.DisplayNameFor(model => model.IsActive));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dt>\r\n        <dd class = \"col-sm-10\">\r\n            ");
+#nullable restore
+#line 48 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Delete.cshtml"
+       Write(Html.DisplayFor(model => model.IsActive));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dd>\r\n    </dl>\r\n    \r\n    <form asp-action=\"Delete\">\r\n        <input type=\"hidden\" asp-for=\"Id\" />\r\n        <input type=\"submit\" value=\"Delete\" class=\"btn btn-danger\" /> |\r\n        <a asp-action=\"Index\">Back to List</a>\r\n    </form>\r\n</div>\r\n");
+        }
+        #pragma warning restore 1998
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.ViewFeatures.IModelExpressionProvider ModelExpressionProvider { get; private set; }
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.IUrlHelper Url { get; private set; }
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.IViewComponentHelper Component { get; private set; }
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.Rendering.IJsonHelper Json { get; private set; }
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.Rendering.IHtmlHelper<GiamSat.Models.DataLogModel> Html { get; private set; }
+    }
+}
+#pragma warning restore 1591
