# 20231105_MrThamTraiHeoTinhVinhPhuc11/sourceCode/GiamSat.API/GiamSat.API/obj/Debug/net5.0/Razor/Views/DataLog/Details.cshtml.g.cs
@@ -1,0 +1,151 @@
+#pragma checksum "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml" "{ff1816ec-aa5e-4d10-87f7-6f4963833460}" "7a0c3feef7fd5583ac3860f173302029e2069062"
+// <auto-generated/>
+#pragma warning disable 1591
+[assembly: global::Microsoft.AspNetCore.Razor.Hosting.RazorCompiledItemAttribute(typeof(AspNetCore.Views_DataLog_Details), @"mvc.1.0.view", @"/Views/DataLog/Details.cshtml")]
+namespace AspNetCore
+{
+    #line hidden
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Threading.Tasks;
+    using Microsoft.AspNetCore.Mvc;
+    using Microsoft.AspNetCore.Mvc.Rendering;
+    using Microsoft.AspNetCore.Mvc.ViewFeatures;
+    [global::Microsoft.AspNetCore.Razor.Hosting.RazorSourceChecksumAttribute(@"SHA1", @"7a0c3feef7fd5583ac3860f173302029e2069062", @"/Views/DataLog/Details.cshtml")]
+    public class Views_DataLog_Details : global::Microsoft.AspNetCore.Mvc.Razor.RazorPage<GiamSat.Models.DataLogModel>
+    {
+        #pragma warning disable 1998
+        public async override global::System.Threading.Tasks.Task ExecuteAsync()
+        {
+            WriteLiteral("\r\n");
+#nullable restore
+#line 3 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+  
+    ViewData["Title"] = "Details";
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n<h1>Details</h1>\r\n\r\n<div>\r\n    <h4>DataLogModel</h4>\r\n    <hr />\r\n    <dl class=\"row\">\r\n        <dt class = \"col-sm-2\">\r\n            ");
+#nullable restore
+#line 14 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+       Write(Html.DisplayNameFor(model => model.ChuongId));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dt>\r\n        <dd class = \"col-sm-10\">\r\n            ");
+#nullable restore
+#line 17 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+       Write(Html.DisplayFor(model => model.ChuongId));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dd>\r\n        <dt class = \"col-sm-2\">\r\n            ");
+#nullable restore
+#line 20 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+       Write(Html.DisplayNameFor(model => model.TenChuong));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dt>\r\n        <dd class = \"col-sm-10\">\r\n            ");
+#nullable restore
+#line 23 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+       Write(Html.DisplayFor(model => model.TenChuong));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dd>\r\n        <dt class = \"col-sm-2\">\r\n            ");
+#nullable restore
+#line 26 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+       Write(Html.DisplayNameFor(model => model.NhietDo));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dt>\r\n        <dd class = \"col-sm-10\">\r\n            ");
+#nullable restore
+#line 29 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+       Write(Html.DisplayFor(model => model.NhietDo));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dd>\r\n        <dt class = \"col-sm-2\">\r\n            ");
+#nullable restore
+#line 32 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+       Write(Html.DisplayNameFor(model => model.DoAm));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dt>\r\n        <dd class = \"col-sm-10\">\r\n            ");
+#nullable restore
+#line 35 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+       Write(Html.DisplayFor(model => model.DoAm));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dd>\r\n        <dt class = \"col-sm-2\">\r\n            ");
+#nullable restore
+#line 38 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+       Write(Html.DisplayNameFor(model => model.CreatedDate));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dt>\r\n        <dd class = \"col-sm-10\">\r\n            ");
+#nullable restore
+#line 41 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+       Write(Html.DisplayFor(model => model.CreatedDate));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dd>\r\n        <dt class = \"col-sm-2\">\r\n            ");
+#nullable restore
+#line 44 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+       Write(Html.DisplayNameFor(model => model.IsActive));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dt>\r\n        <dd class = \"col-sm-10\">\r\n            ");
+#nullable restore
+#line 47 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+       Write(Html.DisplayFor(model => model.IsActive));
+
+#line default
+#line hidden
+#nullable disable
+            WriteLiteral("\r\n        </dd>\r\n    </dl>\r\n</div>\r\n<div>\r\n    <a asp-action=\"Edit\"");
+            BeginWriteAttribute("asp-route-id", " asp-route-id=\"", 1485, "\"", 1509, 1);
+#nullable restore
+#line 52 "D:\MyCompany\8.SourceCode\3.Projects\20231101_MrThamHiTech4P\20231105_MrThamTraiHeoTinhVinhPhuc11\sourceCode\GiamSat.API\GiamSat.API\Views\DataLog\Details.cshtml"
+WriteAttributeValue("", 1500, Model.Id, 1500, 9, false);
+
+#line default
+#line hidden
+#nullable disable
+            EndWriteAttribute();
+            WriteLiteral(">Edit</a> |\r\n    <a asp-action=\"Index\">Back to List</a>\r\n</div>\r\n");
+        }
+        #pragma warning restore 1998
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.ViewFeatures.IModelExpressionProvider ModelExpressionProvider { get; private set; }
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.IUrlHelper Url { get; private set; }
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.IViewComponentHelper Component { get; private set; }
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.Rendering.IJsonHelper Json { get; private set; }
+        [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
+        public global::Microsoft.AspNetCore.Mvc.Rendering.IHtmlHelper<GiamSat.Models.DataLogModel> Html { get; private set; }
+    }
+}
+#pragma warning restore 1591
